--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,6 +2,7 @@
   height: 400px;
   width: 100%;
   display: flex;
+  padding-top: 50px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -12,9 +13,9 @@
 .header img {
   width: 200px;
   height: 200px;
-  margin-top: 100px;
 }
 
 .header h2 {
   color: #FFFFFF;
+  font-size: larger;
 }
