--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,10 +27,32 @@ body {
 
  main {
    background-color: #f4f1ec;
-   width: 90%;
-   margin: auto;
+   width: 100%;
    display: flex;
-   flex-direction: column;
-   align-items: center;
+   flex-flow: row wrap; 
  }
 
+ @media (min-width: 600px) {
+
+ }
+
+ @media (min-width: 800px) {
+  nav {
+    background-color: #4056A1;
+    position:fixed;
+  }
+  .header {
+    width: 27%;
+    margin-top: 175px;
+    float: left;
+    padding-top: 0px;
+  }
+  .container {
+    width: 70%;
+    float: right;
+  }
+
+  .new-tweet {
+    margin-top:150px;
+  }
+ }
