--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,6 @@
 nav {
-  height: 120px;
+  height: 80px;
   width: 100%;
-  background-color: #4056A1;
   color: #FFFFFF;
   padding: .5em 1.5em;
   display:flex;
@@ -10,7 +9,6 @@ nav {
   position:fixed;
   top: 0;
   z-index: 1;
-
 }
 
 .logo {
@@ -22,6 +20,10 @@ nav {
   display:flex;
   flex-direction: column;
   align-items: center;
+}
+
+.navTweet:hover {
+  cursor: pointer;
 }
 
 .fa-angle-double-down {
