--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,7 +1,8 @@
 .tweets {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 50px;
 }
 
@@ -58,7 +59,7 @@
 }
 
 article {
-  width: 100%;
+  width: 90%;
   margin: 25px 0;
   display: flex;
   flex-direction: column;
@@ -81,6 +82,7 @@ article footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-top:10px;
   margin-left: 20px;
   margin-bottom: 10px;
   font-size: 16px;
